--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="home-image">
-      <img src="image.jpg" alt="Sabry Ahmed">
+      <img src="image.JPG" alt="Sabry Ahmed">
     </div>
   </section>
 
@@ -187,3 +187,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
