--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- ABOUT -->
   <section class="about" id="about">
     <div class="about-img">
-      <img src="image.jpg" alt="Sabry Ahmed">
+      <img src="image.JPG" alt="Sabry Ahmed">
     </div>
     <div class="about-content">
       <h2>About <span>Me</span></h2>
@@ -187,4 +187,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
