Revise project details and add gym project link
Updated project descriptions and added a link to the gym website project.

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       <div class="project-card">
         <img src="project1.png" alt="Project 1">
         <h3>Project 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorum excepturi ab, dignissimos quaerat consectetur inventore molestiae minima nemo sunt eius sequi ut facilis illo? Atque, veritatis mollitia! Necessitatibus, cumque!</p>
-        <a href="#" class="btn">Review Project</a>
+        <p>I designed and built a responsive gym website that showcases Programs, and membership, giving visitors an easy way to explore & Pricing special plan also you can calculate your BMI.</p>
+        <a href="https://sabryabosohab2025-tech.github.io/Gymsync.Project/#" class="btn">Review Project</a>
       </div>
       <div class="project-card">
         <img src="project2.png" alt="Project 2">
@@ -187,5 +187,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
