Fix HTML formatting and update project descriptions

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       <div class="project-card">
         <img src="project2.png" alt="Project 2">
         <h3>Project 2</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorum excepturi ab, dignissimos quaerat consectetur inventore molestiae minima nemo sunt eius sequi ut facilis illo? Atque, veritatis mollitia! Necessitatibus, cumque!</p>
-        <a href="#" class="btn">Review Project</a>
+        <p>I designed and built a responsive Beyond-Cigar Website that shows Where tradition meets elegance: experience cigars and accessories designed for the modern gentleman.</p>
+        <a href="https://sabryabosohab2025-tech.github.io/Beyond-Cigar/#home" class="btn">Review Project</a>
       </div>
       <div class="project-card">
         <img src="project3.png" alt="Project 3">
@@ -187,6 +187,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
