--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       <div class="project-card">
         <img src="project3.png" alt="Project 3">
         <h3>Project 3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorum excepturi ab, dignissimos quaerat consectetur inventore molestiae minima nemo sunt eius sequi ut facilis illo? Atque, veritatis mollitia! Necessitatibus, cumque!</p>
-        <a href="#" class="btn">Review Project</a>
+        <p>I designed a 3D website focused on creating an immersive, interactive experience through modern 3D elements and clean UI design that showcases immersive visuals and smooth, interactive elements.</p>
+        <a href="https://sabryabosohab2025-tech.github.io/MCODE-3D-ROBOT/" class="btn">Review Project</a>
       </div>
       <div class="project-card">
         <img src="project4.png" alt="Project 4">
@@ -187,6 +187,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
