Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <img src="project4.png" alt="Project 4">
         <h3>Project 4</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorum excepturi ab, dignissimos quaerat consectetur inventore molestiae minima nemo sunt eius sequi ut facilis illo? Atque, veritatis mollitia! Necessitatibus, cumque!</p>
-        <a href="#" class="btn">Review Project</a>
+        <a href="https://sabryabosohab2025-tech.github.io/CoffeeSHOP/" class="btn">Review Project</a>
       </div>
       <div class="project-card">
         <img src="project5.png" alt="Project 5">
@@ -187,6 +187,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
