--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="project-card">
         <img src="project4.png" alt="Project 4">
         <h3>Project 4</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorum excepturi ab, dignissimos quaerat consectetur inventore molestiae minima nemo sunt eius sequi ut facilis illo? Atque, veritatis mollitia! Necessitatibus, cumque!</p>
+        <p>Welcome to your new online coffee experience — a digital home for your coffee shop that blends warm aesthetics, smooth navigation, and a passion for great coffee. This website is designed to showcase your unique brand, highlight your handcrafted beverages, and bring customers closer to the atmosphere you’ve created in your café.</p>
         <a href="https://sabryabosohab2025-tech.github.io/CoffeeSHOP/" class="btn">Review Project</a>
       </div>
       <div class="project-card">
@@ -187,6 +187,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
