--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         <a href="https://youtube.com/@sabry420?si=_yi7G4GXqo2Hqemd" target="_blank" aria-label="YouTube"><i class="bx bxl-youtube"></i></a>
         <a href="#" target="_blank" aria-label="LinkedIn"><i class="bx bxl-linkedin-square"></i></a>
         <a href="https://www.instagram.com/s.a.b.r.y420?igsh=MW91dHdsZ2VmaWEwdA%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram"><i class="bx bxl-instagram-alt"></i></a>
-        <a href="mailto:sabryabosohab2025@gmail.com" target="_blank" aria-label="Gmail"><i class="bx bxl-gmail"></i></a>
+       <a href="https://wa.me/96597393724" target="_blank" aria-label="WhatsApp">
+    <i class="bx bxl-whatsapp"></i>
+</a>
       </div>
-
       <div class="btn-group">
         <a href="#" class="btn">Hire</a>
         <a href="#contact" class="btn">Contact</a>
@@ -145,24 +146,32 @@
 
   <!-- CONTACT -->
   <section class="contact" id="contact">
-    <h2 class="heading">Contact <span>Me</span></h2>
-    <form action="#">
-      <div class="input-group">
-        <div class="input-box">
-          <input type="text" name="name" placeholder="Full Name" required>
-          <input type="email" name="email" placeholder="Email" required>
-        </div>
-        <div class="input-box">
-          <input type="tel" name="phone" placeholder="Phone Number">
-          <input type="text" name="subject" placeholder="Subject" required>
-        </div>
+  <h2 class="heading">Contact <span>Me</span></h2>
+
+  <form action="https://formsubmit.co/sabryabosohab2025@gmail.com" method="POST">
+
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_subject" value="New Message From Your Website">
+
+    <div class="input-group">
+      <div class="input-box">
+        <input type="text" name="name" placeholder="Full Name" required>
+        <input type="email" name="email" placeholder="Email" required>
       </div>
-      <div class="input-group-2">
-        <textarea name="message" placeholder="Your Message" cols="50" rows="15"></textarea>
-        <button type="submit" class="btn">Send Message</button>
+
+      <div class="input-box">
+        <input type="tel" name="phone" placeholder="Phone Number" required>
+        <input type="text" name="subject" placeholder="Subject" required>
       </div>
-    </form>
-  </section>
+    </div>
+
+    <div class="input-group-2">
+      <textarea name="message" placeholder="Your Message" cols="50" rows="15" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </div>
+
+  </form>
+</section>
 
   <!-- FOOTER -->
   <footer class="footer">
@@ -187,6 +196,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
