Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <div class="project-card">
         <img src="project5.png" alt="Project 5">
         <h3>Project 5</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorum excepturi ab, dignissimos quaerat consectetur inventore molestiae minima nemo sunt eius sequi ut facilis illo? Atque, veritatis mollitia! Necessitatibus, cumque!</p>
-        <a href="#" class="btn">Review Project</a>
+        <p>I created a modern, user-friendly website for a dental clinic to showcase services, build trust, and make booking appointments easier for patients.</p>
+        <a href="https://sabryabosohab2025-tech.github.io/Dental-Clinic-/#home" class="btn">Review Project</a>
       </div>
       <div class="project-card">
         <img src="project6.png" alt="Project 6">
@@ -196,6 +196,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
