--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <div class="project-card">
         <img src="project6.png" alt="Project 6">
         <h3>Project 6</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorum excepturi ab, dignissimos quaerat consectetur inventore molestiae minima nemo sunt eius sequi ut facilis illo? Atque, veritatis mollitia! Necessitatibus, cumque!</p>
-        <a href="#" class="btn">Review Project</a>
+        <p>I developed a sleek website to present advanced 3D digital innovation projects, highlighting modern technological solutions, interactive designs, and creative digital workflows.</p>
+        <a href="https://sabryabosohab2025-tech.github.io/SABRY-3D-Innovation/#contact" class="btn">Review Project</a>
       </div>
     </div>
   </section>
@@ -196,6 +196,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
