--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="social-icons">
         <a href="https://youtube.com/@sabry420?si=_yi7G4GXqo2Hqemd" target="_blank" aria-label="YouTube"><i class="bx bxl-youtube"></i></a>
-        <a href="#" target="_blank" aria-label="LinkedIn"><i class="bx bxl-linkedin-square"></i></a>
+        <a href="https://www.linkedin.com/in/sabry-ahmed-357031393?utm_source=share_via&utm_content=profile&utm_medium=member_ios" target="_blank" aria-label="LinkedIn"><i class="bx bxl-linkedin-square"></i></a>
         <a href="https://www.instagram.com/s.a.b.r.y420?igsh=MW91dHdsZ2VmaWEwdA%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram"><i class="bx bxl-instagram-alt"></i></a>
        <a href="https://wa.me/96597393724" target="_blank" aria-label="WhatsApp">
     <i class="bx bxl-whatsapp"></i>
@@ -196,6 +196,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
