--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     </div>
 
     <div class="home-image">
-      <img src="image.JPG" alt="Sabry Ahmed">
+      <img src="image.jpg" alt="Sabry Ahmed">
     </div>
   </section>
 
   <!-- ABOUT -->
   <section class="about" id="about">
     <div class="about-img">
-      <img src="image.JPG" alt="Sabry Ahmed">
+      <img src="image.jpg" alt="Sabry Ahmed">
     </div>
     <div class="about-content">
       <h2>About <span>Me</span></h2>
@@ -196,6 +196,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
